180-Fixes blog component overflow on mmobile.

--- a/sass/components/layout/_blog.scss
+++ b/sass/components/layout/_blog.scss
@@ -3,7 +3,6 @@
   padding-bottom: 60px;
 
   .uk-slider-container {
-    overflow: unset !important;
 
     li {
       filter: saturate(.75);
